test/TestPhases/typechecker/invalid/PrevInFunction.blc
function f()
    var x: int8 = 8
    var y = prev x
end
@[EntryPoint]
activity A() await false end